# note

./: .gitignore  CMakeLists.txt  README.md  library.json  platformio.ini
.github/workflows/: ci.yml
script/dev/: pio_pre_windows_toolchain.py
src/oc/note/clock/: ClockConstants.hpp  InternalClock.cpp  InternalClock.hpp
src/oc/note/sequencer/: ISequencerOutput.hpp  NoteScheduler.hpp  SequencerEvent.hpp  StepBitMask128.hpp  StepSequencerEngine.cpp  StepSequencerEngine.hpp  StepSequencerRuntimeState.hpp  StepSequencerState.cpp  StepSequencerState.hpp
test/test_clock/: test_clock.cpp
test/test_engine/: test_engine.cpp
test/test_smoke/: test_smoke.cpp
